<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{1d7da588-2dd1-4ea8-8e36-844fd0432ceb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	arstInOuts			: ARRAY[0..3] OF stInOuts;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>